Fixing bug on iOS

--- a/_includes/style.sass
+++ b/_includes/style.sass
@@ -196,6 +196,7 @@ pre
       +font(10)
       display: block
       float: left
+      clear: both
       color: #ddd
       width: 2em
       font-weight: bold
